# CS187_Rendering

./: CMakeLists.txt  README.md
include/nori/: bitmap.h  block.h  bsdf.h  camera.h  common.h  emitter.h  gui.h  integrator.h  medium.h  mesh.h  object.h  proplist.h  ray.h  rfilter.h  sampler.h  scene.h  texture.h  transform.h  warp.h
scenes/final scene/: final.xml
scenes/scene1-Microfacet Dielectric/: micro_dielectric.xml
scenes/scene2-Texture/: cbox_path_mis.xml  cbox_path_mis2.xml  cbox_path_mis3.xml  final_ao.xml  odyssey_mis.xml
scenes/scene3-Participating Media/: cbox_path_mis2.xml  table_path_mis.xml
scenes/scene4-paper/: odyssey_mis.xml
scenes/scene5-environmental light/: cbox_path_mis2.xml
src/: anisotropic.cpp  ao.cpp  area.cpp  blinn.cpp  blinn_texture.cpp  bvh.cpp  dielectric.cpp  diffuse_texture.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  distantsphere.cpp  environmental_light.cpp  fresnel_texture.cpp  homogeneous.cpp  image_texture.cpp  mesh.cpp  micro_dielectric.cpp  microfacet.cpp  motion.cpp  moveObj.cpp  paper.cpp  parser.cpp  path_mats.cpp  path_mis.cpp  path_nee.cpp  path_volumetric.cpp  path_volumetric2.cpp  perspective.cpp  phong.cpp  point.cpp  scene.cpp  specular_texture.cpp  warp.cpp  warptest.cpp
